--- a/github-actions/templates/greetings.yml
+++ b/github-actions/templates/greetings.yml
@@ -1,6 +1,6 @@
 name: Greetings
 
-on: [pull_request_target, issues]
+on: [pull_request_target, issues, push]
 
 jobs:
   greeting:
@@ -9,7 +9,6 @@ jobs:
       issues: write
       pull-requests: write
     steps:
-    # https://github.com/actions/first-interaction
     - uses: actions/first-interaction@v1
       with:
         repo-token: ${{ secrets.GITHUB_TOKEN }}
