Multi Event -- added time

--- a/.github/workflows/multi-event.yml
+++ b/.github/workflows/multi-event.yml
@@ -14,6 +14,7 @@ jobs:
       - name: "Echo Basic Information"
         run: |
           echo "REF: $GITHUB_REF"
+          echo "Cur Time : ${date}"
           echo "Job ID: $GITHUB_JOB"
           echo "Action: $GITHUB_ACTION"
           echo "Actor: $GITHUB_ACTOR"
